--- a/index.html
+++ b/index.html
@@ -1,51 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="icon" href="/images/favicon.png">
-	<link rel="stylesheet" href="/data/css/site.css">
-	<title>Home - Wiz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/data/css/styles.css">
 </head>
-	
 <body>
-<header>
-<nav>
-	<a href="/index.html"><img src="/images/logos/Wiz_Logo.png"></a>
-<ul>
-	<h2 style="font-size: big; color: darkblue;">Welcome!</h2>
-<h2>
-	<a href="/pages/downloads/">Downloads</a>
-	<a href="/pages/games/"> | Our Games</a>
-	<a href="/pages/gallery/"> | Gallery</a>
-	<a href="/pages/about/"> | About Us</a>
-</h2>
-</ul>
-</nav>
-</header>
-
-
-
+    <nav>
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/pages/about.html">About Us</a></li>
+            <li><a href="/pages/news.html">News</a></li>
+            <li><a href="/pages/contact.html">Contact</a></li>
+        </ul>
+        <div class="theme-toggle">
+            <span id="theme-label">Light Mode</span>
+            <input type="checkbox" id="theme-switch">
+        </div>
+    </nav>
+    <div class="container">
+        <h1>Welcome to Cognitech Interactive</h1>
+        <p>Your gateway to cutting-edge software solutions.</p>
+    </div>
+    <script src="/data/js/script.js"></script>
 </body>
-<hr>
-<footer>
-<ul>
-	<h4><p>Resources</p>
-	<a href="/pages/about/">About</a>
-	<a href="/pages/downloads/"> | Download</a>
-	<a href="/pages/gallery/"> | Gallery</a>
-	<a href="/pages/games/"> | Games</a>
-	</h4>
-</ul>
-<ul>
-	<h4><p>Development</p>
-		<a href="https://github.com/wizzycanny/" target="_blank" title="Safe to Visit. 👌">GitHub</a>
-	</h4>
-</ul>
-<ul>
-	<h4><p>Socials</p>
-		<a href="https://x.com/@WizzyCanny" target="_blank" title="Safe to Visit. 👌">Twitter</a>
-		<a href="https://youtube.com/@WizzyCanny" target="_blank" title="Safe to Visit. 👌"> | YouTube</a>
-	</h4>
-</ul>
-</footer>
-<p style="text-align: center;">2024 &copy; <b>WizCanDoIt</b>. All Rights Reserved.</p>
 </html>
