--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
         <div class="theme-toggle">
-            <span id="theme-label">Light Mode</span>
             <input type="checkbox" id="theme-switch">
+            <label for="theme-switch" id="theme-label">Light Mode</label>
         </div>
     </nav>
     <div class="container">
