--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <li><a href="/pages/contact.html">Contact</a></li>
         </ul>
         <div class="theme-toggle">
-            <input type="checkbox" id="theme-switch">
-            <label for="theme-switch" id="theme-label">Light Mode</label>
+            <button id="theme-button">Dark Mode</button>
         </div>
     </nav>
     <div class="container">
