--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/index.html">home</a></li>
             <li><a href="/pages/about.html">About Us</a></li>
             <li><a href="/pages/news.html">News</a></li>
             <li><a href="/pages/contact.html">Contact</a></li>
