--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         <h1>Welcome to Cognitech Interactive</h1>
         <p>Your gateway to cutting-edge software solutions.</p>
     </div>
-    <script src="/data/js/script.js"></script>
+
+    <div class="parallax"></div>
+
+    <footer>
+        <p>© Corebel LLC</p>
+    </footer>
+    
+    <script src="/data/js/script.js" async></script>
 </body>
 </html>
