--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/data/css/styles.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home - Wiz Can</title>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/data/css/styles.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+   
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html">home</a></li>
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/news.html">News</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/index.html"><i class="fas fa-home"></i> home</a></li>
+            <li><a href="/pages/about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
+            <li><a href="/pages/news.html"><i class="fas fa-newspaper"></i> News</a></li>
+            <li><a href="/pages/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
         <div class="theme-toggle">
-            <button id="theme-button">Dark Mode</button>
+            <button id="theme-button"><i class="fas fa-moon"></i> Dark Mode</button>
         </div>
     </nav>
+    
     <div class="container">
         <h1>Welcome to Cognitech Interactive</h1>
         <p>Your gateway to cutting-edge software solutions.</p>
