--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/data/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/pages/about.html">About Us</a></li>
-            <li><a href="/pages/news.html">News</a></li>
-            <li><a href="/pages/contact.html">Contact</a></li>
+            <li><a href="/index.html"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="/pages/about.html"><i class="fas fa-info-circle"></i> About Us</a></li>
+            <li><a href="/pages/news.html"><i class="fas fa-newspaper"></i> News</a></li>
+            <li><a href="/pages/contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
         </ul>
         <div class="theme-toggle">
-            <span id="theme-label">Light Mode</span>
-            <input type="checkbox" id="theme-switch">
+            <button id="theme-button"><i class="fas fa-moon"></i> Dark Mode</button>
         </div>
     </nav>
     <div class="container">
         <h1>Contact Us</h1>
+        <p>Get in touch with us through any of the following methods.</p>
         <form action="https://formspree.io/f/xbljaljd" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
@@ -32,6 +33,16 @@
             <button type="submit">Send</button>
         </form>
     </div>
-    <script src="/data/js/script.js"></script>
+
+    <footer>
+        <div class="socials">
+            <a href="https://twitter.com/wizcann" target="_blank"><i class="fab fa-twitter"></i> @wizcann</a>
+            <a href="https://www.instagram.com/wizcann" target="_blank"><i class="fab fa-instagram"></i> @wizcann</a>
+            <a href="https://github.com/wizcann" target="_blank"><i class="fab fa-github"></i> @wizcann</a>
+        </div>
+        <p>© Corebel LLC</p>
+    </footer>
+    
+    <script src="/data/js/script.js" async></script>
 </body>
 </html>
