--- a/chat/index.html
+++ b/chat/index.html
@@ -6,6 +6,7 @@
   <title>Chat with Codecrafter</title>
   <link rel="stylesheet" href="../assets/css/styles.css">
   <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script src="https://files.bpcontent.cloud/2024/12/02/00/20241202005751-ELT4XG6Q.js"></script>
   <style>
     /* Fullscreen styling to make it feel like an app */
