--- a/about/index.html
+++ b/about/index.html
@@ -38,6 +38,7 @@
     </main>
     <footer class="bg-dark text-white text-center p-3">
         <p>&copy; 2024 WizCann. All rights reserved.</p>
+        <div class="footer-socials"></div>
     </footer>
 </body>
 </html>
