--- a/about/index.html
+++ b/about/index.html
@@ -36,9 +36,9 @@
             <p>We are a team of passionate developers dedicated to providing quality software solutions.</p>
         </div>
     </main>
-    <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2024 WizCann. All rights reserved.</p>
-        <div class="footer-socials"></div>
-    </footer>
+<footer>
+  <div class="footer-socials"></div>
+  <p>© 2024 Wizcann | All rights reserved.</p>
+</footer>
 </body>
 </html>
