--- a/chat/index.html
+++ b/chat/index.html
@@ -68,4 +68,9 @@
     </div>
   </div>
 </body>
+  <footer>
+  <div class="footer-socials"></div>
+  <p>© 2024 Wizcann | All rights reserved.</p>
+</footer>
+
 </html>
