--- a/contact/index.html
+++ b/contact/index.html
@@ -46,9 +46,10 @@
             </form>
         </div>
     </main>
-    <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2024 WizCann. All rights reserved.</p>
-        <div class="footer-socials"></div>
-    </footer>
+<footer>
+  <div class="footer-socials"></div>
+  <p>© 2024 Wizcann | All rights reserved.</p>
+</footer>
+
 </body>
 </html>
