--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
             <p>We provide top-notch solutions for software and developers.</p>
         </div>
     </main>
-    <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2024 WizCann. All rights reserved.</p>
-    </footer>
+<footer>
+  <div class="footer-socials"></div>
+  <p>© 2024 Wizcann | All rights reserved.</p>
+</footer>
+
 </body>
 </html>
