--- a/chat/index.html
+++ b/chat/index.html
@@ -5,72 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat with Codecrafter</title>
   <link rel="stylesheet" href="../assets/css/styles.css">
-  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
+    /* Global Styles for Dark Theme */
     body, html {
       margin: 0;
       padding: 0;
       height: 100%;
       overflow: hidden;
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
+      font-family: 'Fira Code', monospace; /* Developer-inspired font */
+      background: linear-gradient(135deg, #1e1e1e, #2b2b2b);
+      color: #e0e0e0;
     }
 
     .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
+      height: 100%;
+    }
+
+    .chat-iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      background: rgba(0, 0, 0, 0.8);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
     }
 
     .app-header {
-      background: #4CAF50;
-      color: white;
+      background: #121212; /* Darker Header */
+      color: #61dafb; /* React-inspired blue accent */
       padding: 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
       font-size: 1.5rem;
       font-weight: bold;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    .chat-widget {
-      flex: 1;
+      z-index: 10;
       position: relative;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+      border-bottom: 2px solid #282c34;
     }
 
-    /* Ensure Botpress Widget takes full height */
-    .bp-widget-web {
-      height: 100% !important;
+    .app-header span {
+      font-weight: 500;
+      color: #e06c75; /* Stylish accent color */
     }
   </style>
 </head>
 <body>
   <div class="chat-container">
+    <!-- Optional App Header -->
     <header class="app-header">
-      Chat with Codecrafter
+      Chat with <span>Codecrafter</span>
     </header>
 
-    <div class="chat-widget">
-      <script>
-        // Botpress Webchat Configuration
-        window.botpressWebChat.init({
-          hostUrl: "https://cdn.botpress.cloud/webchat/v2.2",
-          botId: "e3842ef7-74f5-445e-8b84-ad3906884710", // Your bot ID
-          enableReset: true,
-          closeButton: true,
-          hideWidget: false,
-          showPoweredBy: false,
-        });
-      </script>
-    </div>
+    <!-- Full-page Chat iframe -->
+    <iframe
+      class="chat-iframe"
+      src="https://cdn.botpress.cloud/webchat/v2.2/shareable.html?configUrl=https://files.bpcontent.cloud/2024/12/02/00/20241202005751-1LTWAUTP.json"
+      allow="microphone; autoplay"
+      loading="lazy"
+    ></iframe>
   </div>
 </body>
-  <footer>
-  <div class="footer-socials"></div>
-  <p>© 2024 Wizcann | All rights reserved.</p>
-</footer>
-
 </html>
