--- a/chat/index.html
+++ b/chat/index.html
@@ -57,7 +57,7 @@
   <div class="chat-container">
     <!-- Optional App Header -->
     <header class="app-header">
-      Chat with <span>Codecrafter</span>
+      Chat with <span>Codecrafter</span><sup style="font-size: xxx-small">Still In Development!</sup>
     </header>
 
     <!-- Full-page Chat iframe -->
