--- a/index.html
+++ b/index.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - WizCann</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore, Code, and Listen to Music by Rendani - A site under development featuring CorebelI Engine, Nina.AI, and Moodify.">
+  <title>Explore, Code and Listen to Music | Rendani</title>
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <header class="bg-dark text-white text-center p-4">
-        <h1>WizCann</h1>
-        <p>For Software and Developers</p>
-    </header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">WizCann</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="/services/">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="/contact/">Contact</a></li>
-                <li class="nav-item"><a class="nav-link" href="/chat/">AI Chat</a></li>
-            </ul>
-        </div>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#apps">Upcoming Apps</a>
+      <a href="#contact">Contact</a>
     </nav>
-    <main class="container mt-4">
-        <div class="jumbotron">
-            <h2>Welcome to WizCann!</h2>
-            <p>We provide top-notch solutions for software and developers.</p>
-        </div>
-    </main>
-<footer>
-  <div class="footer-socials"></div>
-  <p>© 2024 Wizcann | All rights reserved.</p>
-</footer>
+  </header>
 
+  <!-- Main Content -->
+  <main>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+      <h1>Welcome to Rendani's World</h1>
+      <p>This site is currently under development, but exciting things are coming soon!</p>
+      <p>Powered by the revolutionary <strong>CorebelI Engine</strong>, which will enable cutting-edge features for both developers and music lovers.</p>
+    </section>
+
+    <!-- About CorebelI Engine -->
+    <section id="about" class="section">
+      <h2>About CorebelI Engine</h2>
+      <p>The CorebelI Engine is a next-gen platform designed to bring unmatched performance and innovation to web applications. Stay tuned for updates as we refine its capabilities.</p>
+    </section>
+
+    <!-- Upcoming Apps -->
+    <section id="apps" class="section">
+      <h2>Upcoming Web Apps</h2>
+      <div class="card">
+        <h3>Nina.AI</h3>
+        <p>Nina.AI is an intelligent assistant designed to help you code smarter and faster. It will feature a stunning <strong>web particle avatar</strong> or digital face that dynamically interacts with users while assisting in debugging, feature writing, and code exploration. This unique feature will make Nina.AI not only useful but also engaging and visually appealing.</p>
+      </div>
+      <div class="card">
+        <h3>Moodify</h3>
+        <p>Moodify is a modern music web player inspired by Spotify but with a twist. It uses advanced algorithms to <strong>suggest and play music based on your mood</strong>. Whether you're feeling happy, relaxed, or introspective, Moodify will curate the perfect playlist to match your vibe and enhance your listening experience.</p>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2025 Rendani. All rights reserved. Stay tuned for updates!</p>
+    </footer>
+  </main>
 </body>
-</html>
+    </html>
