--- a/index.html
+++ b/index.html
@@ -6,6 +6,77 @@
   <meta name="description" content="Explore, Code, and Listen to Music by Rendani - A site under development featuring CorebelI Engine, Nina.AI, and Moodify.">
   <title>Explore, Code and Listen to Music | Rendani</title>
   <link rel="stylesheet" href="assets/css/main.css">
+  <style>
+    /* General Styling */
+    body {
+      text-align: center;
+      padding: 0;
+      margin: 0;
+    }
+
+    .section {
+      margin: 50px auto;
+      padding: 20px;
+      max-width: 800px;
+    }
+
+    /* Nina's Avatar Animation */
+    .nina-avatar {
+      width: 300px;
+      height: 300px;
+      margin: 20px auto;
+      position: relative;
+      overflow: hidden;
+      border-radius: 50%;
+      background: radial-gradient(circle, #bb86fc, #121212);
+      box-shadow: 0 0 20px rgba(187, 134, 252, 0.5), 0 0 40px rgba(187, 134, 252, 0.3);
+    }
+
+    .particle {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: #ffffff;
+      opacity: 0.8;
+      border-radius: 50%;
+      animation: float 5s infinite ease-in-out;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translate(0, 0);
+        opacity: 0.8;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translate(200px, 200px);
+        opacity: 0;
+      }
+    }
+
+    /* Moodify Logo */
+    .moodify-logo {
+      font-family: 'Dela Gothic One', sans-serif;
+      font-size: 4rem;
+      color: #bb86fc;
+      text-shadow: 
+        2px 2px 10px rgba(0, 0, 0, 0.7),
+        0 0 20px rgba(187, 134, 252, 0.7),
+        0 0 30px rgba(187, 134, 252, 0.5);
+      animation: bounce 2s infinite ease-in-out;
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-20px);
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Header Section -->
@@ -20,36 +91,51 @@
 
   <!-- Main Content -->
   <main>
-    <!-- Hero Section -->
-    <section id="home" class="hero">
-      <h1>Welcome to Rendani's World</h1>
-      <p>This site is currently under development, but exciting things are coming soon!</p>
-      <p>Powered by the revolutionary <strong>CorebelI Engine</strong>, which will enable cutting-edge features for both developers and music lovers.</p>
-    </section>
-
-    <!-- About CorebelI Engine -->
-    <section id="about" class="section">
-      <h2>About CorebelI Engine</h2>
-      <p>The CorebelI Engine is a next-gen platform designed to bring unmatched performance and innovation to web applications. Stay tuned for updates as we refine its capabilities.</p>
-    </section>
-
-    <!-- Upcoming Apps -->
+    <!-- Nina.AI Animation -->
     <section id="apps" class="section">
-      <h2>Upcoming Web Apps</h2>
-      <div class="card">
-        <h3>Nina.AI</h3>
-        <p>Nina.AI is an intelligent assistant designed to help you code smarter and faster. It will feature a stunning <strong>web particle avatar</strong> or digital face that dynamically interacts with users while assisting in debugging, feature writing, and code exploration. This unique feature will make Nina.AI not only useful but also engaging and visually appealing.</p>
-      </div>
-      <div class="card">
-        <h3>Moodify</h3>
-        <p>Moodify is a modern music web player inspired by Spotify but with a twist. It uses advanced algorithms to <strong>suggest and play music based on your mood</strong>. Whether you're feeling happy, relaxed, or introspective, Moodify will curate the perfect playlist to match your vibe and enhance your listening experience.</p>
-      </div>
+      <h2>Nina.AI</h2>
+      <p>Nina.AI features a dynamic particle avatar that reflects its active state while helping you.</p>
+      <div class="nina-avatar" id="ninaAvatar"></div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 Rendani. All rights reserved. Stay tuned for updates!</p>
-    </footer>
+    <!-- Moodify Logo Animation -->
+    <section class="section">
+      <h2>Moodify</h2>
+      <div class="moodify-logo">Moodify</div>
+      <p>Moodify is a music web player that adjusts to your mood. Stay tuned for more updates!</p>
+    </section>
   </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Rendani. All rights reserved. Stay tuned for updates!</p>
+  </footer>
+
+  <script>
+    // JavaScript to create particles for Nina's avatar
+    const avatar = document.getElementById('ninaAvatar');
+
+    // Function to create particles
+    function createParticle() {
+      const particle = document.createElement('div');
+      particle.classList.add('particle');
+      
+      // Randomize particle position and animation duration
+      const size = Math.random() * 10 + 5; // Size between 5px to 15px
+      particle.style.width = `${size}px`;
+      particle.style.height = `${size}px`;
+      particle.style.top = `${Math.random() * 100}%`;
+      particle.style.left = `${Math.random() * 100}%`;
+      particle.style.animationDuration = `${Math.random() * 3 + 2}s`; // 2s to 5s
+      
+      avatar.appendChild(particle);
+
+      // Remove particle after animation
+      particle.addEventListener('animationend', () => particle.remove());
+    }
+
+    // Generate particles every 300ms
+    setInterval(createParticle, 300);
+  </script>
 </body>
-    </html>
+      </html>
