--- a/index.html
+++ b/index.html
@@ -7,74 +7,21 @@
   <title>Explore, Code and Listen to Music | Rendani</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <style>
-    /* General Styling */
-    body {
-      text-align: center;
-      padding: 0;
-      margin: 0;
-    }
-
-    .section {
-      margin: 50px auto;
+    .app-link {
+      display: inline-block;
+      margin: 20px;
       padding: 20px;
-      max-width: 800px;
+      border: 2px solid var(--accent-color);
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 1.2rem;
+      color: var(--primary-text-color);
+      transition: all 0.3s ease;
     }
 
-    /* Nina's Avatar Animation */
-    .nina-avatar {
-      width: 300px;
-      height: 300px;
-      margin: 20px auto;
-      position: relative;
-      overflow: hidden;
-      border-radius: 50%;
-      background: radial-gradient(circle, #bb86fc, #121212);
-      box-shadow: 0 0 20px rgba(187, 134, 252, 0.5), 0 0 40px rgba(187, 134, 252, 0.3);
-    }
-
-    .particle {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: #ffffff;
-      opacity: 0.8;
-      border-radius: 50%;
-      animation: float 5s infinite ease-in-out;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translate(0, 0);
-        opacity: 0.8;
-      }
-      50% {
-        opacity: 1;
-      }
-      100% {
-        transform: translate(200px, 200px);
-        opacity: 0;
-      }
-    }
-
-    /* Moodify Logo */
-    .moodify-logo {
-      font-family: 'Dela Gothic One', sans-serif;
-      font-size: 4rem;
-      color: #bb86fc;
-      text-shadow: 
-        2px 2px 10px rgba(0, 0, 0, 0.7),
-        0 0 20px rgba(187, 134, 252, 0.7),
-        0 0 30px rgba(187, 134, 252, 0.5);
-      animation: bounce 2s infinite ease-in-out;
-    }
-
-    @keyframes bounce {
-      0%, 100% {
-        transform: translateY(0);
-      }
-      50% {
-        transform: translateY(-20px);
-      }
+    .app-link:hover {
+      background-color: var(--accent-color);
+      color: var(--background-color);
     }
   </style>
 </head>
@@ -85,57 +32,29 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#apps">Upcoming Apps</a>
-      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <!-- Main Content -->
   <main>
-    <!-- Nina.AI Animation -->
-    <section id="apps" class="section">
-      <h2>Nina.AI</h2>
-      <p>Nina.AI features a dynamic particle avatar that reflects its active state while helping you.</p>
-      <div class="nina-avatar" id="ninaAvatar"></div>
+    <section id="home" class="hero">
+      <h1>Welcome to Rendani's World</h1>
+      <p>Discover cutting-edge apps powered by CorebelI Engine. Choose an app to explore:</p>
     </section>
 
-    <!-- Moodify Logo Animation -->
-    <section class="section">
-      <h2>Moodify</h2>
-      <div class="moodify-logo">Moodify</div>
-      <p>Moodify is a music web player that adjusts to your mood. Stay tuned for more updates!</p>
+    <!-- Links to Web Apps -->
+    <section id="apps" class="section">
+      <h2>Explore Our Apps</h2>
+      <div>
+        <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
+        <a href="pages/apps/moodify/index.html" class="app-link">Moodify</a>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rendani. All rights reserved. Stay tuned for updates!</p>
+    <p>&copy; 2025 Rendani. All rights reserved.</p>
   </footer>
-
-  <script>
-    // JavaScript to create particles for Nina's avatar
-    const avatar = document.getElementById('ninaAvatar');
-
-    // Function to create particles
-    function createParticle() {
-      const particle = document.createElement('div');
-      particle.classList.add('particle');
-      
-      // Randomize particle position and animation duration
-      const size = Math.random() * 10 + 5; // Size between 5px to 15px
-      particle.style.width = `${size}px`;
-      particle.style.height = `${size}px`;
-      particle.style.top = `${Math.random() * 100}%`;
-      particle.style.left = `${Math.random() * 100}%`;
-      particle.style.animationDuration = `${Math.random() * 3 + 2}s`; // 2s to 5s
-      
-      avatar.appendChild(particle);
-
-      // Remove particle after animation
-      particle.addEventListener('animationend', () => particle.remove());
-    }
-
-    // Generate particles every 300ms
-    setInterval(createParticle, 300);
-  </script>
 </body>
-      </html>
+</html>
