--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -6,6 +6,43 @@
   <meta name="description" content="Nina.AI - Your intelligent coding assistant.">
   <title>Nina.AI | Rendani</title>
   <link rel="stylesheet" href="../../../assets/css/main.css">
+  <style>
+    /* Styling for the avatar */
+    .nina-avatar {
+      width: 300px;
+      height: 300px;
+      margin: 50px auto;
+      position: relative;
+      overflow: hidden;
+      border-radius: 50%;
+      background: radial-gradient(circle, #bb86fc, #121212);
+      box-shadow: 0 0 20px rgba(187, 134, 252, 0.5), 0 0 40px rgba(187, 134, 252, 0.3);
+    }
+
+    .particle {
+      position: absolute;
+      width: 10px;
+      height: 10px;
+      background: #ffffff;
+      opacity: 0.8;
+      border-radius: 50%;
+      animation: float 5s infinite ease-in-out;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translate(0, 0);
+        opacity: 0.8;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        transform: translate(200px, 200px);
+        opacity: 0;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Header Section -->
@@ -34,20 +71,29 @@
   </footer>
 
   <script>
-    // Particle animation for Nina's avatar
+    // JavaScript to create particles for Nina's avatar
     const avatar = document.getElementById('ninaAvatar');
+
+    // Function to create particles
     function createParticle() {
       const particle = document.createElement('div');
       particle.classList.add('particle');
-      const size = Math.random() * 10 + 5;
+
+      // Randomize particle position and animation duration
+      const size = Math.random() * 10 + 5; // Size between 5px to 15px
       particle.style.width = `${size}px`;
       particle.style.height = `${size}px`;
       particle.style.top = `${Math.random() * 100}%`;
       particle.style.left = `${Math.random() * 100}%`;
-      particle.style.animationDuration = `${Math.random() * 3 + 2}s`;
+      particle.style.animationDuration = `${Math.random() * 3 + 2}s`; // 2s to 5s
+
       avatar.appendChild(particle);
+
+      // Remove particle after animation
       particle.addEventListener('animationend', () => particle.remove());
     }
+
+    // Generate particles every 300ms
     setInterval(createParticle, 300);
   </script>
 </body>
