--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -7,8 +7,9 @@
   <title>Moodify | Rendani</title>
   <link rel="stylesheet" href="../../../assets/css/main.css">
   <style>
+    /* Moodify-specific styles */
     .moodify-logo {
-      font-family: 'Dela Gothic One', sans;
+      font-family: 'Dela Gothic One', sans-serif;
       font-size: 4rem;
       color: #bb86fc;
       text-shadow: 
@@ -16,7 +17,7 @@
         0 0 20px rgba(187, 134, 252, 0.7),
         0 0 30px rgba(187, 134, 252, 0.5);
       animation: bounce 2s infinite ease-in-out;
-      margin: 50px 0;
+      margin: 20px 0;
     }
 
     @keyframes bounce {
@@ -25,6 +26,62 @@
       }
       50% {
         transform: translateY(-20px);
+      }
+    }
+
+    .mood-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 20px 0;
+    }
+
+    .mood-button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      border: none;
+      background-color: var(--accent-color);
+      color: var(--primary-text-color);
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .mood-button:hover {
+      background-color: var(--hover-accent-color);
+    }
+
+    #results {
+      margin-top: 20px;
+      text-align: left;
+    }
+
+    .track {
+      padding: 10px;
+      margin: 5px 0;
+      background-color: var(--card-background);
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Loading spinner styles */
+    #loading {
+      display: none;
+      margin: 20px auto;
+      border: 5px solid #f3f3f3;
+      border-top: 5px solid var(--accent-color);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
       }
     }
   </style>
@@ -43,13 +100,33 @@
     <section id="features" class="section">
       <h1>Moodify</h1>
       <div class="moodify-logo">Moodify</div>
-      <p>Experience music like never before. Moodify uses mood-detection algorithms to create the perfect playlist for your vibes.</p>
+      <p>Discover music that matches your mood. Select a mood to get personalized recommendations:</p>
+      
+      <!-- Mood Buttons -->
+      <div class="mood-buttons">
+        <button class="mood-button" data-mood="Happy">Happy</button>
+        <button class="mood-button" data-mood="Calm">Calm</button>
+        <button class="mood-button" data-mood="Energetic">Energetic</button>
+      </div>
+
+      <!-- Loading Spinner -->
+      <div id="loading"></div>
+
+      <!-- Results Section -->
+      <div id="results" class="section">
+        <h2>Recommended Tracks</h2>
+        <p>Select a mood to see tracks here.</p>
+      </div>
     </section>
   </main>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rendani. Moodify by CorebelI Engine.</p>
+    <p>&copy; 2025 Rendani. Moodify powered by CorebelI Engine.</p>
   </footer>
+
+  <!-- Scripts -->
+  <script type="module" src="../../../API.js"></script>
+  <script type="module" src="moodify.js"></script>
 </body>
-  </html>
+        </html>
