--- a/index.html
+++ b/index.html
@@ -3,25 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore, Code, and Listen to Music by Rendani - A site under development featuring CorebelI Engine, Nina.AI, and Moodify.">
+  <meta name="description" content="Explore, Code, and Listen to Music by Rendani - Featuring Nina.AI, Moodify, and more.">
   <title>Explore, Code and Listen to Music | Rendani</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <style>
+    /* Additional styling for main page */
+    .hero {
+      text-align: center;
+      padding: 50px 20px;
+      background: linear-gradient(135deg, #1e1e1e, #121212);
+      color: var(--primary-text-color);
+    }
+
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    .apps-section {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 40px auto;
+      padding: 20px;
+      flex-wrap: wrap;
+    }
+
     .app-link {
       display: inline-block;
-      margin: 20px;
       padding: 20px;
       border: 2px solid var(--accent-color);
       border-radius: 10px;
       text-decoration: none;
       font-size: 1.2rem;
       color: var(--primary-text-color);
+      background-color: var(--card-background);
       transition: all 0.3s ease;
+      text-align: center;
+      width: 200px;
     }
 
     .app-link:hover {
       background-color: var(--accent-color);
       color: var(--background-color);
+    }
+
+    .footer-socials a {
+      margin: 0 10px;
+      font-size: 1.5rem;
+      color: var(--primary-text-color);
+      transition: color 0.3s ease;
+    }
+
+    .footer-socials a:hover {
+      color: var(--accent-color);
     }
   </style>
 </head>
@@ -31,30 +71,33 @@
     <nav>
       <a href="#home">Home</a>
       <a href="#about">About</a>
-      <a href="#apps">Upcoming Apps</a>
+      <a href="#apps">Apps</a>
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Main Content -->
-  <main>
-    <section id="home" class="hero">
-      <h1>Welcome to Rendani's World</h1>
-      <p>Discover cutting-edge apps powered by CorebelI Engine. Choose an app to explore:</p>
-    </section>
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <h1>Welcome to Rendani's World</h1>
+    <p>Explore the best in AI-powered apps and mood-based music. Stay tuned for exciting updates!</p>
+  </section>
 
-    <!-- Links to Web Apps -->
-    <section id="apps" class="section">
-      <h2>Explore Our Apps</h2>
-      <div>
-        <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
-        <a href="pages/apps/moodify/index.html" class="app-link">Moodify</a>
-      </div>
-    </section>
-  </main>
+  <!-- Apps Section -->
+  <section id="apps" class="section">
+    <h2>Our Featured Apps</h2>
+    <div class="apps-section">
+      <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
+      <a href="pages/apps/moodify/index.html" class="app-link">Moodify</a>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
+    <div class="footer-socials"></div>
     <p>&copy; 2025 Rendani. All rights reserved.</p>
   </footer>
+
+  <!-- Scripts -->
+  <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
