--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -126,7 +126,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script type="module" src="../../../API.js"></script>
+  <script type="module" src="../../../assets/js/API.js"></script>
   <script type="module" src="moodify.js"></script>
 </body>
         </html>
