--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -96,5 +96,6 @@
     // Generate particles every 300ms
     setInterval(createParticle, 300);
   </script>
+  <script type="module" src="../../../assets/js/API.js"></script>
 </body>
 </html>
