--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Explore, Code, and Listen to Music by Rendani - Featuring Nina.AI, Moodify, and more.">
+  <meta name="description" content="Explore, Code, and Listen to Music - Featuring Nina.AI, Moodify, and more.">
   <title>Explore, Code and Listen to Music | Rendani</title>
   <link rel="stylesheet" href="assets/css/main.css">
   <style>
@@ -72,19 +72,19 @@
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#apps">Apps</a>
-      <a href="#contact">Contact</a>
     </nav>
   </header>
 
   <!-- Hero Section -->
   <section id="home" class="hero">
-    <h1>Welcome to Rendani's World</h1>
+    <h1>Welcome.</h1>
     <p>Explore the best in AI-powered apps and mood-based music. Stay tuned for exciting updates!</p>
   </section>
 
   <!-- Apps Section -->
   <section id="apps" class="section">
-    <h2>Our Featured Apps</h2>
+    <h2>Apps</h2>
+    <p style="font-size: x-small;">(IN DEVELOPMENT)</p>
     <div class="apps-section">
       <a href="pages/apps/nina/index.html" class="app-link">Nina.AI</a>
       <a href="pages/apps/moodify/index.html" class="app-link">Moodify</a>
