--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Nina.AI - Your intelligent coding assistant.">
   <title>Nina.AI | Rendani</title>
-  <link rel="stylesheet" href="../../../assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <style>
     /* Styling for the avatar */
     .nina-avatar {
@@ -48,9 +48,8 @@
   <!-- Header Section -->
   <header>
     <nav>
-      <a href="../../../index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#about">About Nina</a>
-      <a href="#features">Features</a>
     </nav>
   </header>
 
@@ -67,7 +66,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rendani. Nina.AI by CorebelI Engine.</p>
+    <p>&copy; 2025 Rendani. All Rights Reserved.</p>
   </footer>
 
   <script>
@@ -96,6 +95,6 @@
     // Generate particles every 300ms
     setInterval(createParticle, 300);
   </script>
-  <script type="module" src="../../../assets/js/API.js"></script>
+  <script type="module" src="assets/js/API.js"></script>
 </body>
 </html>
