--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Moodify - Music that matches your mood.">
   <title>Moodify | Rendani</title>
-  <link rel="stylesheet" href="../../../assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <style>
     /* Moodify-specific styles */
     .moodify-logo {
-      font-family: 'Dela Gothic One', sans-serif;
+      font-family: 'Prompt', sans;
       font-size: 4rem;
       color: #bb86fc;
       text-shadow: 
@@ -90,7 +90,7 @@
   <!-- Header Section -->
   <header>
     <nav>
-      <a href="../../../index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#features">Features</a>
     </nav>
   </header>
@@ -126,7 +126,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script type="module" src="../../../assets/js/API.js"></script>
+  <script type="module" src="assets/js/API.js"></script>
   <script type="module" src="moodify.js"></script>
 </body>
-        </html>
+</html>
