--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Nina.AI - Your intelligent coding assistant.">
   <title>Nina.AI | Rendani</title>
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../../../assets/css/main.css">
   <style>
     /* Styling for the avatar */
     .nina-avatar {
@@ -48,7 +48,7 @@
   <!-- Header Section -->
   <header>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="../../../index.html">Home</a>
       <a href="#about">About Nina</a>
     </nav>
   </header>
@@ -95,6 +95,6 @@
     // Generate particles every 300ms
     setInterval(createParticle, 300);
   </script>
-  <script type="module" src="assets/js/API.js"></script>
+  <script type="module" src="../../../assets/js/API.js"></script>
 </body>
 </html>
