--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Moodify - Music that matches your mood.">
   <title>Moodify | Rendani</title>
-  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="../../../assets/css/main.css">
   <style>
     /* Moodify-specific styles */
     .moodify-logo {
@@ -126,7 +126,7 @@
   </footer>
 
   <!-- Scripts -->
-  <script type="module" src="assets/js/API.js"></script>
+  <script type="module" src="../../../assets/js/API.js"></script>
   <script type="module" src="moodify.js"></script>
 </body>
 </html>
