--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -122,7 +122,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Rendani. Moodify powered by CorebelI Engine.</p>
+    <p>&copy; 2025 Rendani. All Rights Reserved.</p>
   </footer>
 
   <!-- Scripts -->
