--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -107,7 +107,7 @@
     <p>Developed with ❤️. <a href="https://wizcann.is-a.dev" target="_blank">Visit Wizcann</a></p>
   </footer>
 
-  <!--<script>
+  <script>
     // Check if the user is logged in
     const isLoggedIn = localStorage.getItem('isLoggedIn');
     if (!isLoggedIn) {
@@ -120,7 +120,7 @@
       localStorage.removeItem('isLoggedIn');
       window.location.href = "login.html"; // Redirect to login page after logout
     }
-  </script>-->
+</script>
   <script src="../../../assets/js/API.js"></script>
   <script src="moodify.js"></script>
   
