--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -1,100 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Nina.AI - Your intelligent coding assistant.">
-  <title>Nina.AI | Rendani</title>
-  <link rel="stylesheet" href="../../../assets/css/main.css">
-  <style>
-    /* Styling for the avatar */
-    .nina-avatar {
-      width: 300px;
-      height: 300px;
-      margin: 50px auto;
-      position: relative;
-      overflow: hidden;
-      border-radius: 50%;
-      background: radial-gradient(circle, #bb86fc, #121212);
-      box-shadow: 0 0 20px rgba(187, 134, 252, 0.5), 0 0 40px rgba(187, 134, 252, 0.3);
-    }
-
-    .particle {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background: #ffffff;
-      opacity: 0.8;
-      border-radius: 50%;
-      animation: float 5s infinite ease-in-out;
-    }
-
-    @keyframes float {
-      0% {
-        transform: translate(0, 0);
-        opacity: 0.8;
-      }
-      50% {
-        opacity: 1;
-      }
-      100% {
-        transform: translate(200px, 200px);
-        opacity: 0;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nina | Rendani</title>
+    <link href="../../../assets/css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        #avatar-container {
+            background: linear-gradient(to bottom, #1a1a2e, #16213e);
+        }
+        .chat-container {
+            height: calc(100vh - 24rem);
+        }
+    </style>
 </head>
-<body>
-  <!-- Header Section -->
-  <header>
-    <nav>
-      <a href="../../../index.html">Home</a>
-      <a href="#about">About Nina</a>
-    </nav>
-  </header>
+<body class="bg-gray-100">
+    <div class="flex flex-col h-screen max-w-4xl mx-auto p-4">
+        <div id="avatar-container" class="h-64 rounded-lg mb-4 relative"></div>
+        
+        <div class="chat-container bg-white rounded-lg shadow-lg flex flex-col">
+            <div id="messages" class="flex-1 p-4 overflow-y-auto space-y-4">
+                <!-- Messages will be inserted here -->
+            </div>
 
-  <!-- Main Content -->
-  <main>
-    <!-- About Nina -->
-    <section id="about" class="section">
-      <h1>Nina.AI</h1>
-      <p>Welcome to Nina.AI, your intelligent assistant designed to make coding smarter and faster.</p>
-      <div class="nina-avatar" id="ninaAvatar"></div>
-      <p>Interact with Nina's dynamic particle-based avatar as you explore her capabilities.</p>
-    </section>
-  </main>
+            <form id="chat-form" class="p-4 border-t">
+                <div class="flex space-x-4">
+                    <input
+                        type="text"
+                        id="chat-input"
+                        class="flex-1 border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                        placeholder="Type your message..."
+                    />
+                    <button
+                        type="submit"
+                        class="bg-blue-600 text-white rounded-lg px-4 py-2 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                    >
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <line x1="22" y1="2" x2="11" y2="13"></line>
+                            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Rendani. All Rights Reserved.</p>
-  </footer>
-
-  <script>
-    // JavaScript to create particles for Nina's avatar
-    const avatar = document.getElementById('ninaAvatar');
-
-    // Function to create particles
-    function createParticle() {
-      const particle = document.createElement('div');
-      particle.classList.add('particle');
-
-      // Randomize particle position and animation duration
-      const size = Math.random() * 10 + 5; // Size between 5px to 15px
-      particle.style.width = `${size}px`;
-      particle.style.height = `${size}px`;
-      particle.style.top = `${Math.random() * 100}%`;
-      particle.style.left = `${Math.random() * 100}%`;
-      particle.style.animationDuration = `${Math.random() * 3 + 2}s`; // 2s to 5s
-
-      avatar.appendChild(particle);
-
-      // Remove particle after animation
-      particle.addEventListener('animationend', () => particle.remove());
-    }
-
-    // Generate particles every 300ms
-    setInterval(createParticle, 300);
-  </script>
-  <script type="module" src="../../../assets/js/API.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="../../../assets/js/API.js"></script>
+    <script src="../../../assets/js/script.js"></script>
+    <script src="avatar.js"></script>
+    <script src="chat.js"></script>
 </body>
 </html>
