--- a/pages/apps/moodify/login.html
+++ b/pages/apps/moodify/login.html
@@ -82,7 +82,7 @@
   <script>
     // Get the callback URL from the query parameters
     const urlParams = new URLSearchParams(window.location.search);
-    const callbackUrl = urlParams.get('callback_url') || 'moodify.html'; // Default to 'moodify.html' if not provided
+    const callbackUrl = urlParams.get('callback_url') || 'index.html'; // Default to 'moodify.html' if not provided
 
     // Handle login form submission
     document.getElementById('login-form').addEventListener('submit', (event) => {
