--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -118,7 +118,7 @@
     // Logout function
     function logout() {
       localStorage.removeItem('isLoggedIn');
-      window.location.href = "login.html"; // Redirect to login page after logout
+      window.location.href = "index.html"; // Redirect to login page after logout
     }
 </script>
   <script src="../../../assets/js/API.js"></script>
