--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -103,17 +103,11 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Rendani. Moodify powered by CorebelI Engine.</p>
+    <p>&copy; 2025 Rendani. All Rights Reserved.</p>
     <p>Developed with ❤️. <a href="https://wizcann.is-a.dev" target="_blank">Visit Wizcann</a></p>
   </footer>
 
   <script>
-    // Check if the user is logged in
-    const isLoggedIn = localStorage.getItem('isLoggedIn');
-    if (!isLoggedIn) {
-      // Redirect to login page if not logged in
-      window.location.href = "login.html";
-    }
 
     // Logout function
     function logout() {
