--- a/pages/apps/moodify/index.html
+++ b/pages/apps/moodify/index.html
@@ -9,7 +9,7 @@
   <style>
     /* Add any custom styles specific to Moodify here */
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Propmt', sans-serif;
       background-color: #1d1d1d;
       color: #fff;
       margin: 0;
@@ -81,7 +81,7 @@
   <!-- Header with Navigation -->
   <header>
     <nav>
-      <a href="login.html" onclick="logout()">Logout</a> <!-- Logout Link -->
+       <!-- Logout Link -->
       <a href="#features">Features</a>
     </nav>
   </header>
@@ -104,20 +104,9 @@
   <!-- Footer Section -->
   <footer>
     <p>&copy; 2025 Rendani. All Rights Reserved.</p>
-    <p>Developed with ❤️. <a href="https://wizcann.is-a.dev" target="_blank">Visit Wizcann</a></p>
+    <p>Developed with ❤️. <a href="https://manugeni.is-a.dev" target="_blank">Visit Wizcann</a></p>
   </footer>
-
-  <script>
-
-    // Logout function
-    function logout() {
-      localStorage.removeItem('isLoggedIn');
-      window.location.href = "index.html"; // Redirect to login page after logout
-    }
-</script>
   <script src="../../../assets/js/API.js"></script>
   <script src="moodify.js"></script>
-  
-
 </body>
 </html>
