--- a/pages/apps/nina/index.html
+++ b/pages/apps/nina/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nina | Rendani</title>
     <link href="../../../assets/css/main.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         #avatar-container {
             background: linear-gradient(to bottom, #1a1a2e, #16213e);
@@ -19,8 +20,7 @@
 </head>
 <body class="bg-gray-100">
     <div class="flex flex-col h-screen max-w-4xl mx-auto p-4">
-        <div id="avatar-container" class="h-64 rounded-lg mb-4 relative"></div>
-        
+        <div id="avatar-container" style="width: 400px; height: 400px;"></div>
         <div class="chat-container bg-white rounded-lg shadow-lg flex flex-col">
             <div id="messages" class="flex-1 p-4 overflow-y-auto space-y-4">
                 <!-- Messages will be inserted here -->
